--- a/index.html
+++ b/index.html
@@ -1,49 +1,88 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>mon Cv</title>
 </head>
+
 <body>
     <div id="blocPrincipal">
-        <nav>
-            <ul>
-                <li><a>Accueil</a></li>
-                <li><a>A Propos</a></li>
-                <li><a>Compétences</a></li>
-                <li><a>Formation</a></li>
-                <li><a>Portofolio</a></li>
-                <li><a>Me contacter</a></li>
-            </ul>
-        </nav>
-        <!--ecran 1-->
+        <header>
+        <div class="photo">
+            <img src="/assets/image_t.png" alt="image_photo">
+        </div>
+            <nav>
+                <ul>
+                    <li><a>Accueil</a></li>
+                    <li><a>A Propos</a></li>
+                    <li><a>Compétences</a></li>
+                    <li><a>Formation</a></li>
+                    <li><a>Portofolio</a></li>
+                    <li><a>Me contacter</a></li>
+                </ul>
+            </nav>
+
+        </header>
+        
+        <!--ecran 1 en savoir plus-->
+
+
         <div class="ecran ecran1">
-        </div>
-        <div id="ecran2"></div>
 
-        <!--ecran 2-->
+            
+
+            <div class="savoir">
+                <img src="/assets/image_tfk_1.jpg" alt="image tfk.png">
+
+            </div>
+
+        </div>
+        <!--ecran 2 -->
         <div class="ecran ecran2">
-            <h2>ecran 2</h2>
+            <img src="/assets/image_tfk.png" alt="image tfk.png">
+
         </div>
 
-        <!--ecran 3-->
-        <div class="ecran ecran3">
-            <h2>ecran 3</h2>
-        </div>
-        <!--ecran 4-->
-        <div class="ecran ecran4">
-                <h2>Ecran 4</h2>
-        </div>
-        <!--ecran 5-->
-        <div class="ecran ecran5">
-                <h2>Ecran 5</h2>
-        </div>
-        <!--ecran 6-->
-        <div class="ecran ecran6">
-            <h2>Ecran 6</h2>
-        </div>
     </div>
+
+
+    <!--ecran 3 valeur, objetif,Passion -->
+    <div class="ecran ecran3">
+        <h3> valeur </h3><br>
+        <p> blablabla bla bla </p>
+        <h3> objetif </h3><br>
+        <p>DCFVGBHJK</p>
+        <h3> Passion </h3><br>
+        <p>MLKJH</p>
+
+    </div>
+    <!--ecran 4-->
+    <div class="ecran ecran4">
+        <h3>Mes Compétences</h3>
+        <p></p>
+        <h3>Me contacter</h3>
+        <p></p>
+    </div>
+    <!--ecran 5-->
+    <div class="ecran ecran5">
+        <h3> CV </h3>
+        <p></p>
+    </div>
+    <!--ecran 6-->
+    <div class="ecran ecran6">
+        <h3> Formation et Parcour </h3>
+        <p></p>
+    </div>
+    </div>
+
+
+
+
+
 </body>
+
 </html>
