--- a/index.html
+++ b/index.html
@@ -6,83 +6,131 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/097058085d.js" crossorigin="anonymous"></script>
     <title>mon Cv</title>
 </head>
 
 <body>
     <div id="blocPrincipal">
         <header>
-        <div class="photo">
-            <img src="/assets/image_t.png" alt="image_photo">
-        </div>
+            <div class="photo">
+                <a href="">
+                    <img src="/assets/image_t.png" alt="image_photo">
+                </a>
+            </div>
             <nav>
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbtn">
+                    <i class="fas fa-navicon fa-2x"></i>
+                </label>
+                <label class="logo"></label>
                 <ul>
                     <li><a>Accueil</a></li>
                     <li><a>A Propos</a></li>
-                    <li><a>Compétences</a></li>
                     <li><a>Formation</a></li>
+                    <li><a>Compétences</a></li>
                     <li><a>Portofolio</a></li>
                     <li><a>Me contacter</a></li>
                 </ul>
             </nav>
 
         </header>
-        
-        <!--ecran 1 en savoir plus-->
 
 
-        <div class="ecran ecran1">
-
-            
-
-            <div class="savoir">
-                <img src="/assets/image_tfk_1.jpg" alt="image tfk.png">
-
-            </div>
-
-        </div>
-        <!--ecran 2 -->
-        <div class="ecran ecran2">
-            <img src="/assets/image_tfk.png" alt="image tfk.png">
-
-        </div>
 
     </div>
+
+    <!--ecran 1 en savoir plus -->
+    <div class="ecran ecran1">
+        <div class="savoir">
+            <h3 class="black">En Savoir Plus</h3>
+
+        </div>
+    </div>
+
+
+    <!--ecran 2 qui je suis -->
+    <div class="ecran ecran2">
+        <h3 class="h3W">Qui Je Suis</h3>
+
+    </div>
+
 
 
     <!--ecran 3 valeur, objetif,Passion -->
     <div class="ecran ecran3">
-        <h3> valeur </h3><br>
-        <p> blablabla bla bla </p>
-        <h3> objetif </h3><br>
-        <p>DCFVGBHJK</p>
-        <h3> Passion </h3><br>
-        <p>MLKJH</p>
+        <div class="title">
+            <h3 class="h3W">Mes Compétences</h3>
+        </div>
 
+        <div class="contained">
+            <div class="container">
+                <div class="top">
+                    <h2> valeur </h2>
+                </div>
+                <div class="down">
+                    <p>Texte</p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="top">
+                    <h2> objectif</h2>
+                </div>
+                <div class="down">
+                    <p>Texte</p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="top">
+                    <h2> Passion </h2>
+                </div class="top">
+                <div>
+
+                </div>
+                <p>Texte</p>
+            </div>
+        </div>
     </div>
-    <!--ecran 4-->
+    </div>
+    <!--ecran 4 formation-->
     <div class="ecran ecran4">
-        <h3>Mes Compétences</h3>
-        <p></p>
-        <h3>Me contacter</h3>
-        <p></p>
+        <h3> Formation </h3>
     </div>
-    <!--ecran 5-->
+
+    <!--ecran 5 CV-->
     <div class="ecran ecran5">
         <h3> CV </h3>
         <p></p>
+        <h2>Telecharger</h2>
+
     </div>
     <!--ecran 6-->
     <div class="ecran ecran6">
-        <h3> Formation et Parcour </h3>
+        <h3>Parcours </h3>
         <p></p>
     </div>
+
+    <div class="ecran ecran7">
+        <h3 class="h3W">Portofolio</h3>
+        <p></p>
+
     </div>
+
+
+    <div class="ecran ecran8">
+        <img src="/assets/contacts.png" alt="image contacts.png">
+        <h3>Me contacter</h3>
+    </div>
+
 
 
 
 
 
 </body>
+<footer>
+    <script src="script.js"></script>
+</footer>
 
 </html>
