--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         <header>
             <div class="photo">
                 <a href="">
-                    <img src="/assets/image_t.png" alt="image_photo">
+                    <img src="assets/image_t.png" alt="image_photo">
+                </a>
+            </div>
+            <div class="fond_decran">
+                <a href="">
+                    <!-- <img src="assets/developpeur-web.png" alt="fond d'ecran"> -->
                 </a>
             </div>
             <nav>
@@ -39,61 +44,67 @@
                     <li><a>Compétences</a></li>
                     <li><a>Portofolio</a></li>
                     <li><a>Mon Cv</a></li>
+
                     <li><a>Me contacter</a></li>
                 </ul>
             </nav>
         </header>
 
-    <!--ecran 1 en savoir plus -->
-    <div class="ecran ecran1">
-        <div class="savoir">
-            <h3 class="black">En Savoir Plus</h3>
+        <!--ecran 1 en savoir plus -->
+        <div class="ecran ecran1">
+            <div class="savoir">
+                <h3 class="black">En Savoir Plus</h3>
+                
+            </div>
         </div>
-    </div>
 
 
-    <!--ecran 2 qui je suis -->
-    <div class="ecran ecran2">
-        <h3 class="h3W">Qui Je Suis</h3>
+        <!--ecran 2 qui je suis -->
+        <div class="ecran ecran2">
+            <h3 class="red">Qui Je Suis</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aliquid alias in odit illum quam natus eos ab! Corrupti quas tenetur, beatae quae fuga sint at maxime aliquid nisi cum voluptatibus quisquam perferendis ex repudiandae nam explicabo doloribus repellendus distinctio asperiores voluptatem cupiditate laborum earum amet porro! Neque, sunt quaerat.</p>
 
-    </div>
-    <!--ecran 3 formation-->
-    <div class="ecran ecran3">
-        <h3 class="black"> Formation </h3>
-    </div>
-
-    <div class="ecran ecran4">
-        <div class="title">
-            <h3 class="h3W">Mes Compétences</h3>
         </div>
-        <div class="contained">
-            <div class="container">
-                <div class="top">
-                    <h2> valeur </h2>
+        <!--ecran 3 formation-->
+        <div class="ecran ecran3">
+            <h3 class="h3W">Formation</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illo culpa voluptatem voluptates fugiat modi beatae? Cumque sequi aliquid obcaecati temporibus molestiae debitis dolorem libero, quibusdam aperiam asperiores, vel minima sunt dicta, repudiandae vitae porro non veritatis blanditiis rerum earum fugit! Voluptatibus saepe, reiciendis minus quis sapiente molestias perspiciatis ipsam!</p>
+        </div>
+        <!--ecran 4-->
+        <div class="ecran ecran4">
+            <div class="title">
+                <h3 class="red">Mes Compétences</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolorem? Harum voluptates adipisci perspiciatis eligendi nam aperiam dicta velit, dolore enim commodi numquam aspernatur veniam soluta. Aspernatur culpa quis numquam exercitationem optio sunt, dolores ratione nisi expedita quidem explicabo cupiditate dolorem sed excepturi vero necessitatibus voluptatibus, at laborum quibusdam obcaecati.</p>
+            </div>
+            <div class="contained">
+                <div class="container">
+                    <div class="top">
+                        <h2> valeur </h2>
+                    </div>
+                    <div class="down">
+                        <p>Texte</p>
+                    </div>
                 </div>
-                <div class="down">
+                <div class="container">
+                    <div class="top">
+                        <h2> objectif</h2>
+                        <p>blalalalalalalalalalalal</p>
+                    </div>
+                    <div class="down">
+                        <p>Texte</p>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="top">
+                        <h2> Passion </h2>
+                    </div class="top">
+                    <div>
+
+                    </div>
                     <p>Texte</p>
                 </div>
             </div>
-            <div class="container">
-                <div class="top">
-                    <h2> objectif</h2>
-                </div>
-                <div class="down">
-                    <p>Texte</p>
-                </div>
-            </div>
-            <div class="container">
-                <div class="top">
-                    <h2> Passion </h2>
-                </div class="top">
-                <div>
-
-                </div>
-                <p>Texte</p>
-            </div>
         </div>
-    </div>
     </div>
     <!--ecran 5-->
 
@@ -105,37 +116,40 @@
     </div>
     <!--ecran 6-->
     <div class="ecran ecran6">
-        <h3 class="h3W">Mon Cv</h3>
+        <h3 class="black">Mon Cv</h3>
+        
+        <div class="top">
+            <h3>Telecharger</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore praesentium deserunt fugit labore facere eius ad placeat. Sint eaque exercitationem maxime earum perferendis minima magnam officiis aut doloremque saepe! Assumenda quod magni dicta tempora ullam, nesciunt possimus natus in harum!</p>
+            <p>lsdkngj</p>
+        </div>
+        <div class="down">
+            <h3>css</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse facere qui enim quaerat perspiciatis totam, magnam, temporibus doloremque debitis odio nihil. Maiores voluptatum quod veritatis sit optio, laborum architecto laboriosam rerum distinctio, amet, beatae soluta nihil accusantium ducimus saepe corrupti.</p>
+        </div>
+        <div class="container">
+            <div class="top">
+                <h3>Javascript</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, illum repudiandae officiis non exercitationem architecto porro aperiam corporis. Reprehenderit, obcaecati. Vitae reprehenderit rem consequatur dolorem voluptatibus, voluptates et, adipisci deserunt quod quisquam repellat consequuntur. Possimus, accusantium sapiente asperiores eveniet ullam repellat minus et corrupti cupiditate ipsum, aliquam porro rem quidem.
+
+                </p>
+            </div>
+        </div>
+
 
     </div>
 
-
-    <div class="ecran ecran7">
-        <div class="container">
-            <div class="top">
-                <h2 class="black">Telecharger</h2>
-            </div>
-            <div class="down">
-                <h2 class="black">css</h2>
-            </div>
-        </div>
-        <div class="container">
-            <div class="top">
-                <h2 class="black">Javascript</h2>
-            </div>
-        </div>
-    </div> 
     <!--ecran 7-->
 
-    <div class="ecran ecran8">
-        <img src="/assets/contacts.png" alt="">
+    <div class="ecran ecran7">
+        <img src="assets/contacts.png" alt="">
         <h3 class="h3W">Me contacter</h3>
 
         <!-- <div id="result-form">
         </div> -->
         <div class="contain-tout">
             <div class="form-container">
-                <form method="post" id="contact-form">
+                <form id="contact-form">
                     <div>
                         <label for="nom">Nom : *</label>
                         <input type="text" name="nom" id="nom" required minlength="3" maxlength="20">
@@ -164,7 +178,7 @@
             </div>
         </div>
     </div>
-</div>
+    </div>
 </body>
 
 <footer>
